--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+    "main": "dist/app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
