--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
     "main": "dist/app.js",
-  "scripts": {
-    "start": "node dist/app.js"
-  },
+"scripts": {
+  "start": "node app.js"
+}
   "keywords": [],
   "author": "",
   "license": "ISC",
