--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-    "main": "dist/app.js",
-"scripts": {
-  "start": "node app.js"
-}
+  "main": "backend/app.js",
+  "scripts": {
+    "start": "node backend/app.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
